[package]
name = "rust-lsystem"
version = "0.1.0"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]

[lib]
name = "rustlsystem"
path = "src/lib.rs"

[[bin]]
name = "rustlsystem-viewer"
path = "src/bin/main.rs"

[dependencies]
time = "0.1.35"
simple_parallel = "0.3"
# piston_window = "0.33.0"
